# Kuebiko

./: .editorconfig  .env.example  .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  blocklist.py  chat.py  chat_exchange.txt  creds.py  creds1.py  json_handler.py  logger.py  main.py  main_speechtotext.py  main_userContext - With Gemini Support.py  main_userContext.py  message.py  output.txt  package.json  prompt_chat.txt  pyproject.toml  requirements.txt  settings.py  speaker_bot_based.py  test.py  version.txt  vlc_based.py  wired-strategy-379023-3cb007372512.json
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: main.yml
Tools/: getAudioDevices.py  getVoices.py  voiceGrabber.py
data/: profane_sites.txt  profanity_wordlist.txt  profanity_wordlistlong.txt
kuebiko_tauri/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
kuebiko_tauri/src/: App.svelte  (+5 more)
kuebiko_v/: package.json
logs/: log.txt
profanityfiltermaster/: README.md  requirements.txt  utils.py
python_files/: chat.py  environment.yml  llamachat.py  main.py  message.py  output.txt  prompt_chat.txt  requirements.txt
src/: chat.py  chattypes.py  credentials.py  enums.py  filter_message.py  generate_audio.py  generate_subtitle.py  index.html  json_handler.py  logger.py  main.js  openai.py  queue_consumer.py  speaker_bot_based.py  speechtotext_openai.py  styles.css  texttospeech.py  texttospeech_evenlabs.py  texttospeech_google.py  texttospeech_openai.py  twitchbot.py  utils.py  websocket.py
src-tauri/: Cargo.toml
twitchchatmaster/: LICENSE  twitch_chat.py
(+18 files in other folders)
